- Implemented: Enever, option to specify different providers for Gas/Electricity
- Implemented: Enphase, counter helper to prevent turnover caused by powerloss, reboot or other envoy issues
- Implemented: Enphase, Initial support for Encharge battery status (needs more work)
- Implemented: Managed Counters, now possible to use negative values
- Implemented: Mitsubishi WF RAC Airco
- Implemented: MQTT-AD, added support for climate min_temp/max_temp and temp_step
- Implemented: MQTT-AD, added support for number voc type
- Implemented: MQTT-AD, added support for Wh and Wm sensors
- Implemented: MQTT-AD, don't add new devices when this is disabled in the system
- Implemented: MQTT-AD: Fan percentage_command_template merged with preset_modes
- Implemented: SetPoint devices can now be configured with a custom unit, min/max and step size and have a custom icon
- Implemented: Support for Pytjon 3.12
- Implemented: TeleInfo, added Tempo field
- Implemented: Temp/Hum/Baro or combination can be replaced by any other Temp/Hum/Baro or combination
- Changed: Floorplan, better display of current state for counter devices
- Changed: Floorplan, Sound Icon state (0 dB = Off else On)
- Changed: MQTT-AD: better device name generation
- Changed: Netatmo login, now using the API Token
- Fixed: Eport to csv from Charts
- Fixed: EventSystem, corrected event of RGB/W/WW devices
- Fixed: MQTT-AD: better handling of Push-On/Push-Off devices
- Fixed: MQTT-AD: better handling of Switch commands that needs a 'state' object
- Fixed: MQTT-AD: fixed brightness for HS lights
- Fixed: MQTT-AD: prevent blind from updating on non-numeric state changes
- Fixed: MQTT-AD, RGB dimmers did not work correctly in scenes/timers
- Fixed: Sunset/rise timers now correctly set the time for next day
- Fixed: Switches defined with "Off Delay" are not set to "Off" at startup
- Removed: OpenZWave (Move to ZWaveJS-UI in combination with MQTT Auto Discovery)

Version 2023.2 (July 21 2023)