@@ -20,3 +20,4 @@ e.g. esp3Hardware (camel case) defined in setup/EnOceanESP3.js corresponds to es
 <panasonic-tv-hardware ng-if="$ctrl.hardware.Type === 69" hardware="$ctrl.hardware"></panasonic-tv-hardware>
 <ble-box-hardware ng-if="$ctrl.hardware.Type === 82" hardware="$ctrl.hardware"></ble-box-hardware>
 <mqttad-Hardware ng-if="$ctrl.hardware.Type === 125" hardware="$ctrl.hardware"></mqttad-Hardware>
+<mqtt-Hardware ng-if="$ctrl.hardware.Type === 43" hardware="$ctrl.hardware"></mqtt-Hardware>
