@@ -8,6 +8,7 @@ define([
     'hardware/setup/Pinger',
     'hardware/setup/WakeOnLan',
     'hardware/setup/MQTT-AD',
+    'hardware/setup/MQTT',
 ], function (app) {
     app.controller('HardwareSetupController', function ($routeParams, domoticzApi) {
         var vm = this;
